--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.5",
+    "@angular/animations": "^11.2.6",
     "@angular/cdk": "^11.2.5",
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
     "anutils": "^0.1.1",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
