--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
+    "stylelint-config-standard": "^21.0.0",
     "tailwindcss": "^2.1.1",
     "ts-node": "~8.3.0",
     "typescript": "~4.1.5"
