--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@apollo/client": "^3.0.0",
     "anutils": "^0.1.1",
+    "apollo-angular": "^2.4.0",
+    "graphql": "^15.0.0",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
