--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,14 +12,11 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom",
-      "esnext.asynciterable"
-    ],
+    "lib": ["es2018", "dom", "esnext.asynciterable"],
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
